调整PyCompiler接口